# src/swagger.json
@@ -31,6 +31,10 @@
       "description": "Operations on Pear majors. These routes require authorization via access token."
     },
     {
+      "name": "Matches",
+      "description": "Operations on Pear matches. These routes require authorization via access token."
+    },
+    {
       "name": "Users",
       "description": "Operations on Pear users. These routes require authorization via access token."
     }
@@ -330,6 +334,62 @@
                       "items": {
                         "$ref": "#/components/schemas/CornellMajor"
                       }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "properties": {
+                    "success": {
+                      "type": "boolean",
+                      "example": false
+                    },
+                    "data": {
+                      "$ref": "#/components/schemas/Error"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/match/": {
+      "get": {
+        "tags": [
+          "Matches"
+        ],
+        "summary": "Gets another user's matches, given their netID. If none provided, gets current user's matches.",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "netID",
+            "schema": {
+              "type": "string"
+            },
+            "description": "The user's netID"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "properties": {
+                    "success": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "data": {
+                      "$ref": "#/components/schemas/Match"
                     }
                   }
                 }
@@ -1007,7 +1067,7 @@
   },
   "servers": [
     {
-      "url": "https://pear-backend.cornellappdev.com/api/v1"
+      "url": "http://pear-backend.cornellappdev.com/api/v1"
     }
   ],
   "components": {
@@ -1061,6 +1121,31 @@
       "Goal": {
         "type": "string",
         "example": "Finding my people"
+      },
+      "Match": {
+        "type": "object",
+        "properties": {
+          "users": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/User"
+            }
+          },
+          "availabilities": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Availability"
+            }
+          },
+          "status": {
+            "type": "string",
+            "example": "created/proposed/cancelled/active/inactive"
+          },
+          "meetingTime": {
+            "type": "date",
+            "example": "Sat Nov 28 2020 22:49:41 GMT-0500 (Eastern Standard Time)"
+          }
+        }
       },
       "TalkingPoint": {
         "type": "string",
@@ -1180,6 +1265,12 @@
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/Availability"
+            }
+          },
+          "matches": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Match"
             }
           }
         }
